--- a/app/src/main/res/layout/activity_security.xml
+++ b/app/src/main/res/layout/activity_security.xml
@@ -12,11 +12,54 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_margin="20dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_margin="10dp"
         app:srcCompat="@drawable/img_lock" />
 
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:columnCount="6"
+        android:rowCount="1">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_columnWeight="2" />
+
+
+        <EditText
+            android:id="@+id/et_pw_simple"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_column="2"
+            android:layout_columnWeight="4"
+            android:backgroundTint="#E89002"
+            android:ems="4"
+            android:focusable="false"
+            android:gravity="center_horizontal"
+            android:inputType="numberPassword"
+            android:textColor="#FA9F0B" />
+
+        <ImageView
+            android:id="@+id/iv_del"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_column="4"
+            android:layout_columnWeight="1"
+            android:src="@drawable/img_del" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_row="0"
+            android:layout_column="5"
+            android:layout_columnWeight="1" />
+
+    </GridLayout>
 
     <GridLayout
         android:layout_width="match_parent"
@@ -91,7 +134,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_gravity="right"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         app:srcCompat="@drawable/img_lock2" />
 
 </LinearLayout>
