--- a/app/src/main/res/layout/drawer_navi.xml
+++ b/app/src/main/res/layout/drawer_navi.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawer"
+    android:id="@+id/navi"
     android:layout_width="300dp"
     android:layout_height="match_parent"
     android:layout_gravity="start"
@@ -49,7 +49,7 @@
         android:layout_height="6px"
         android:layout_marginHorizontal="5dp"
         android:layerType="software"
-        android:src="@drawable/dotted_line" />
+        android:src="@drawable/line_dotted" />
 
     <TextView
         android:layout_width="match_parent"
@@ -92,7 +92,7 @@
         android:layout_height="6px"
         android:layout_marginHorizontal="5dp"
         android:layerType="software"
-        android:src="@drawable/dotted_line" />
+        android:src="@drawable/line_dotted" />
 
     <TextView
         android:layout_width="match_parent"
