--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.TodaysTodo" parent="Theme.AppCompat.Light">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">#FA9F0B</item>
         <item name="colorPrimaryVariant">#85656565</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -12,14 +12,19 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <!--
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        -->
     </style>
 
     <style name="Theme.TodaysTodo.NoActionBar">
+        <!--
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        -->
     </style>
+
 
     <style name="Theme.TodaysTodo.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
